--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "pinia": "2.1.7",
     "vue": "3.4.31",
     "vue-cropper": "1.1.1",
-    "vue-router": "4.4.0"
+    "vue-router": "4.4.0",
+    "vuedraggable": "^4.1.0",
+    "clipboard": "^2.0.11",
+    "js-beautify": "^1.14.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "5.0.5",
